<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/neon_life"
    tools:context=".WeatherFragment">

    <ImageView
        android:id="@+id/lemons"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/lemons"
        android:src="@drawable/lemons" />

    <TextView
        android:id="@+id/current_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/lemons"
        android:text="@string/current_weather" />

    <RelativeLayout
        android:id="@+id/location_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/lemons">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/location" />
    </RelativeLayout>


</RelativeLayout>